<resources>
    <string name="app_name">Arpanets</string>
    <string name="signup_title">Cadastrar</string>
    <string name="signup_hint">Insira suas credenciais para se cadastrar na Arpanets</string>
    <string name="login_title">Entrar</string>
    <string name="login_hint">Insira suas credenciais para acessar a Arpanets</string>
    <string name="prompt_user">Insira seu usuário</string>
    <string name="prompt_password">Insira sua senha</string>
    <string name="action_sign_in">Acessar</string>
    <string name="action_sign_up">Cadastrar</string>
    <string name="invalid_username">Usuário inválido</string>
    <string name="invalid_password">Senha deve ter >5 caracteres</string>
    <string name="prompt_age">Insira sua idade</string>
    <string name="action_back">Voltar</string>
    <string name="questionnaire_title">Como está sua saúde mental?</string>
    <string name="questionnaire_text">Responda ao questionário SRQ-20 sobre como se sentiu nos últimos 30 dias.
        \n\nSão 20 perguntas (Sim/Não) que avaliam sofrimento mental, mas não dão diagnóstico (só um profissional pode diagnosticar).
        \n\nCada Sim soma 1 ponto, variando de 0 (sem sofrimento) a 20 (sofrimento grave). Pontuação ≥ 7 indica possível sofrimento.
        \n\nResponda todas as questões:</string>
    <string name="answer_yes">Sim</string>
    <string name="answer_no">Não</string>
    <string name="action_send">Enviar</string>
    <string name="result_none">Não foi identificado sofrimento mental de acordo com os parâmetros do SRQ-20.</string>
    <string name="result_low">Sofrimento mental leve.</string>
    <string name="result_medium">Sofrimento mental moderado.</string>
    <string name="result_high">Sofrimento mental grave.</string>
    <string name="action_start_questionnaire">Iniciar o questionário</string>
    <string name="response_date">Data de resposta:</string>
    <string name="result_title">Resultado do Questionário SRQ-20</string>
    <string name="result_title2">Detalhes das respostas:</string>
    <string name="result_score">Pontuação Total:</string>
    <string name="action_retest">Refazer Questionário</string>
    <string name="label_question_number">Pergunta </string>
    <string name="user_not_found">Usuário não encontrado, faça login novamente!</string>
    <string name="missing_answers">Você precisa responder todas as perguntas!</string>
</resources>