<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:fillViewport="true"
    android:paddingVertical="@dimen/activity_vertical_margin_sign"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    tools:context=".SignInActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card_login"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/login_hint"
            android:textColor="#777"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/prompt_user"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/action_sign_in"
            android:backgroundTint="#4CAF50"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#3F51B5"
            android:text="@string/action_sign_up"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
